fix z-index issue in main content area

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -22,7 +22,7 @@ body {
   padding-top: 200px;
   padding-bottom: 30px;
   position: relative;
-  z-index: -2;
+  z-index: 1;
   box-shadow: 0px 5px 10px 1px rgba(0,0,0,.2);
 }
 
